--- a/website/css/style.css
+++ b/website/css/style.css
@@ -23,7 +23,7 @@ body, html{
 }
 
 .pimg1{
-  background-image:url('../img/DSC_0129.jpg');
+  background-image:url('../img/image0.jpg');
   min-height:100%;
 }
 
