--- a/e-com/style.css
+++ b/e-com/style.css
@@ -1,62 +1,63 @@
-*{
+* {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 
 }
 
-body{
+body {
 	font-family: 'Poppins', sans-serif;
 }
 
-.navbar{
+.navbar {
 	display: flex;
 	align-items: center;
 	padding: 20px;
 
 }
 
-nav{
+nav {
 	flex: 1;
 	text-align: right;
 }
 
-nav ul{
+nav ul {
 	display: inline-block;
 	list-style-type: none;
 }
 
-nav ul li{
+nav ul li {
 	display: inline-block;
 	margin-right: 20px;
 
 }
 
-a{
+a {
 	text-decoration: none;
 	color: #555;
 
 }
 
-p{
+p {
 	color: #555;
 }
 
 
-.container{
+.container {
 	max-width: 1300px;
 	margin: auto;
 	padding-left: 25px;
 	padding-right: 25px;
 }
 
-.bantan{
-	background:radial-gradient(#ffd6d6,#fff);
-	
+.bantan {
+	background: radial-gradient(#ffd6d6, #fff);
+
 
 
 }
-.row{
+
+.row {
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
@@ -64,27 +65,27 @@ p{
 }
 
 
-.col-2{
+.col-2 {
 	flex-basis: 50%;
 	min-width: 300px;
 
 }
 
 
-.col-2 img{
+.col-2 img {
 	max-width: 100%;
 	padding: 50px 0;
 }
 
-.col-2 h1{
+.col-2 h1 {
 	font-size: 50px;
 	line-height: 60px;
 	margin: 25px 0;
 }
 
-.btn{
+.btn {
 	display: inline-block;
-	background:#ff5243;
+	background: #ff5243;
 	color: #fff;
 	padding: 8px 30px;
 	margin: 30px 0;
@@ -93,45 +94,45 @@ p{
 }
 
 
-.btn:hover{
+.btn:hover {
 	background: #563434;
 }
 
-.header{
-	background:radial-gradient(#fff,#ffd6d6);	
+.header {
+	background: radial-gradient(#fff, #ffd6d6);
 }
 
-.header .row{
+.header .row {
 	margin-top: 70px;
 }
 
 
-.categories{
+.categories {
 	margin: 70px 0;
 }
 
-.col-3{
+.col-3 {
 	flex-basis: 30%;
 	min-width: 250px;
 	margin-bottom: 30px;
 
 }
 
-.col-3 img{
+.col-3 img {
 	width: 100%;
 }
 
-.small-container{
+.small-container {
 	max-width: 1080px;
-	margin:auto;
+	margin: auto;
 	padding-left: 25px;
 	padding-right: 25px;
-	
+
 }
 
 
 
-.col-4{
+.col-4 {
 	flex-basis: 25%;
 	padding: 10px;
 	min-width: 200px;
@@ -140,11 +141,11 @@ p{
 
 }
 
-.col-4 img{
+.col-4 img {
 	width: 100%;
 }
 
-.title{
+.title {
 	text-align: center;
 	margin: 0 auto 80px;
 	position: relative;
@@ -153,7 +154,7 @@ p{
 }
 
 
-.title:after{
+.title:after {
 	content: '';
 	background: #ff523b;
 	width: 80px;
@@ -166,66 +167,65 @@ p{
 }
 
 
-h4{
+h4 {
 	color: #555;
 	font-weight: normal;
 }
 
-.col-4 p{
+.col-4 p {
 	font-size: 14px;
 }
 
-.rating .fa{
-	color:#ff523b;
+.rating .fa {
+	color: #ff523b;
 }
 
-.col-4:hover{
+.col-4:hover {
 	transform: translateY(-5px);
 
 }
 
-.offer{
-	background:radial-gradient(#fff,#ffd6d6);
+.offer {
+	background: radial-gradient(#fff, #ffd6d6);
 	margin-top: 80px;
 	margin-bottom: 80px;
 	padding: 30px 0;
 
 }
 
-.col-2 .offer-img{
+.col-2 .offer-img {
 	padding: 50px;
 }
 
-small{
-	color:#555;
+small {
+	color: #555;
 }
 
-<!------ Testimonial ---->
-
-.testimonial{
-	padding-top: 200px; 
+/* < !------ Testimonial ----> */
+.testimonial {
+	padding-top: 200px;
 }
 
-.testimonial .col-3{
+.testimonial .col-3 {
 	text-align: center;
 	padding: 40px 20px;
-	box-shadow: 0 0 20px 0px rgba(0,0,0,0.1);
+	box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.1);
 	cursor: pointer;
 	transition: transform 0.5s;
 
 }
 
-.testimonial .col-3 img{
+.testimonial .col-3 img {
 	width: 50px;
 	margin-top: 20px;
 	border-radius: 50%;
 }
 
-.testimonial .col-3:hover{
+.testimonial .col-3:hover {
 	transform: translateY(-10px);
 }
 
-.fa.fa-quote-left{
+.fa.fa-quote-left {
 
 	font-size: 34px;
 	color: #ff523b;
@@ -235,111 +235,114 @@ small{
 
 
 
-.col-3 p{
+.col-3 p {
 	font-size: 12px;
 	margin: 12px 0;
 	color: #777;
 }
 
-.testimonial .col-3 h3{
+.testimonial .col-3 h3 {
 	font-weight: 600;
 	color: #555;
 	font-size: 16px;
 }
 
 
-<!------ Brands ------>
-
-.brands{
+/* < !------ Brands ------> */
+.brands {
 	margin: 100px auto;
 
 }
 
-.col-5{
+.col-5 {
 	width: 160px;
 }
 
-.col-5 img{
+.col-5 img {
 	width: 100%;
 	cursor: pointer;
 	filter: contrast(50%);
 }
-	
-.col-5 img:hover{
+
+.col-5 img:hover {
 	filter: contrast(200%);
 }
 
 
 /*---------footer------*/
 
-.footer{
+.footer {
 	background: #000;
 	color: #8a8a8a;
 	font-size: 14px;
 	padding: 60px 0 20px;
 }
 
-.footer p{
+.footer p {
 	color: #8a8a8a;
 }
 
-.footer h3{
+.footer h3 {
 	color: #fff;
 	margin-bottom: 20px;
 }
 
-.footer-col-1, .footer-col-2, .footer-col-3, .footer-col-4{
+.footer-col-1,
+.footer-col-2,
+.footer-col-3,
+.footer-col-4 {
 	min-width: 250px;
 	margin-bottom: 20px;
 
 }
 
-.footer-col-1{
+.footer-col-1 {
 	flex-basis: 30%
 }
 
-.footer-col-2{
+.footer-col-2 {
 	flex: 1;
 	text-align: center;
 
 }
 
-.footer-col-2 img{
+.footer-col-2 img {
 	width: 180px;
 	margin-bottom: 20px;
 }
 
-.footer-col-3, .footer-col-4{
+.footer-col-3,
+.footer-col-4 {
 	flex-basis: 12%;
 	text-align: center;
 }
 
-ul{
+ul {
 	list-style-type: none;
 }
 
-.app-logo{
+.app-logo {
 	margin-top: 20px;
 }
 
-.app-logo img{
+.app-logo img {
 	width: 140px;
 }
 
-.footer hr{
-	border:none;
+.footer hr {
+	border: none;
 	background: #b5b5b5;
 	height: 1px;
 	margin: 20px 0;
 
 }
 
-.copyright{
-	text-align: center;	
+.copyright {
+	text-align: center;
 }
 
 
-.menu-icon{
+.menu-icon {
 	width: 28px;
 	margin-left: 20px;
 	display: none;
@@ -348,30 +351,30 @@ ul{
 
 /*------All products-----*/
 
-.row-2{
+.row-2 {
 	justify-content: space-between;
 	margin: 100px auto 50px;
 }
 
-select{
+select {
 	border: 1px solid #ff523b;
 	padding: 5px;
 }
 
-select:focus{
+select:focus {
 	outline: none;
 
 }
 
-.page-btn{
-	margin:0 auto 80px;
+.page-btn {
+	margin: 0 auto 80px;
 	text-align: center;
 
 }
 
-.page-btn span{
+.page-btn span {
 	display: inline-block;
-	border:1px solid #ff523b;
+	border: 1px solid #ff523b;
 	margin-left: 10px;
 	width: 40px;
 	height: 40px;
@@ -380,61 +383,61 @@ select:focus{
 	cursor: pointer;
 }
 
-.page-btn span:hover{
+.page-btn span:hover {
 	background: #ff523b;
 	color: #fff;
 }
 
 /*---single products details*/
 
-.single-product{
+.single-product {
 	margin-top: 80px;
-} 
+}
 
-.single-product .col-2 img{
+.single-product .col-2 img {
 	padding: 0;
 }
 
-.single-product .col-2{
+.single-product .col-2 {
 	padding: 20px;
 }
 
-.single-product h4{
+.single-product h4 {
 	margin: 20px 0;
 	font-size: 22px;
 	font-weight: bold;
 }
 
-.single-product select{
+.single-product select {
 	display: block;
 	padding: 10px;
 	margin-top: 20px
 }
 
-.single-product input{
+.single-product input {
 	width: 50px;
 	height: 40px;
 	padding-left: 10px;
 	font-size: 20px;
 	margin-right: 10px;
-	border:1px solid #ff523b;
+	border: 1px solid #ff523b;
 }
 
-input:focus{
+input:focus {
 	outline: none;
 }
 
-.single-product .fa{
+.single-product .fa {
 	color: #ff523b;
 	margin-left: 10px;
 }
 
-.small-img-row{
+.small-img-row {
 	display: flex;
 	justify-content: space-between;
 }
 
-.small-img-col{
+.small-img-col {
 	flex-basis: 24%;
 	cursor: pointer;
 }
@@ -442,21 +445,22 @@ input:focus{
 
 /*---cart items----*/
 
-.cart-page{
+.cart-page {
 	margin: 80px auto;
 }
-table{
+
+table {
 	width: 100%;
 	border-collapse: collapse;
 
 }
 
-.cart-info{
+.cart-info {
 	display: flex;
 	flex-wrap: wrap;
 }
 
-th{
+th {
 	text-align: left;
 	padding: 5px;
 	color: #fff;
@@ -465,58 +469,58 @@ th{
 
 }
 
-td{
+td {
 	padding: 10px 5px;
 }
 
-td input{
+td input {
 	width: 40px;
 	height: 30px;
 	padding: 5px;
 
 }
 
-td a{
+td a {
 	color: #ff523b;
 	font-size: 12px;
 }
 
-td img{
+td img {
 	width: 90px;
 	height: 90px;
 	margin-right: 10px;
 
 }
 
-.total-price{
+.total-price {
 	display: flex;
 	justify-content: flex-end;
 }
 
-.total-price table{
+.total-price table {
 	border-top: 3px solid #ff523b;
 	width: 100%;
 	max-width: 400px;
 }
 
-td:last-child{
+td:last-child {
 	text-align: right;
 }
 
 
-th:last-child{
+th:last-child {
 	text-align: right;
 }
 
 /*------account page-----*/
 
-.account-page{
+.account-page {
 	padding: 50px 0;
-	background:radial-gradient(#fff,#ffd6d6); 
+	background: radial-gradient(#fff, #ffd6d6);
 
 }
 
-.form-container{
+.form-container {
 	background: #fff;
 	width: 300px;
 	height: 400px;
@@ -524,11 +528,11 @@ th:last-child{
 	text-align: center;
 	padding: 20px 0;
 	margin: auto;
-	box-shadow: 0 0 20px 0px rgba(0,0,0,0.1);
+	box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.1);
 	overflow: hidden;
 }
 
-.form-container span{
+.form-container span {
 	font-weight: bold;
 	padding: 0 10px;
 	color: #555;
@@ -538,13 +542,13 @@ th:last-child{
 
 }
 
-.form-btn{
+.form-btn {
 	display: inline-block;
 
 }
 
-.form-container form{
-	max-width: 300px;
+.form-container form {
+	width: 300px;
 	padding: 0 20px;
 	position: absolute;
 	top: 130px;
@@ -553,7 +557,7 @@ th:last-child{
 
 }
 
-form input{
+form input {
 	width: 100%;
 	height: 30px;
 	margin: 10px 0;
@@ -561,42 +565,44 @@ form input{
 	border: 1px solid #ccc;
 }
 
-form .btn{
+form .btn {
 	width: 100%;
-	border:none;
+	border: none;
 	cursor: pointer;
 	margin: 10px 0;
 
 }
 
-form .btn:focus{
+form .btn:focus {
 	outline: none;
 }
 
-#LoginForm{
-	left: -300px;
-}
-#RegForm{
-	left: 0;
+#LoginForm {
+	left: 0px;
 }
 
-form a{
+#RegForm {
+	left: 300px;
+}
+
+form a {
 	font-size: 12px;
 }
 
-#Indicator{
+#Indicator {
 	width: 100px;
-	border:none;
+	border: none;
 	background: #ff523b;
 	height: 3px;
 	margin-top: 8px;
-	transform: translateX(s);
+	transition: all 1s;
+	transform: translateX(0px);
 }
 
 /*------media query for menu-----*/
 
-@media only screen and (max-width: 800px){
-	nav ul{
+@media only screen and (max-width: 800px) {
+	nav ul {
 		position: absolute;
 		top: 70px;
 		left: 0;
@@ -605,7 +611,8 @@ form a{
 		overflow: hidden;
 		transition: max-height 0.5s;
 	}
-	nav ul li{
+
+	nav ul li {
 		display: block;
 		margin-right: 50px;
 		margin-top: 10px;
@@ -614,12 +621,14 @@ form a{
 
 
 	}
-	nav ul li a{
+
+	nav ul li a {
 
 		color: #fff;
 
 	}
-	.menu-icon{
+
+	.menu-icon {
 		display: block;
 		cursor: pointer;
 	}
@@ -627,34 +636,34 @@ form a{
 
 /*------media query for less than 600 screen size-----*/
 
-@media only screen and (max-width: 600px){
-	.row{
+@media only screen and (max-width: 600px) {
+	.row {
 		text-align: center;
 	}
 
-	.col-2, .col-3, .col-4{
+	.col-2,
+	.col-3,
+	.col-4 {
 		flex-basis: 100%;
 
 	}
 
-	.single-product .row{
+	.single-product .row {
 		text-align: left;
 	}
 
-	.single-product .col-2{
+	.single-product .col-2 {
 		padding: 20px 0;
 	}
 
-	.single-product h1{
+	.single-product h1 {
 		font-size: 26px;
 		line-height: 32px;
 	}
 
-	.cart-info p{
+	.cart-info p {
 		display: none;
 
 	}
 
 }
-
-
